# database

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
SQL/: create.sql
src/: config.rs  main.rs
src/database/: csv.rs  csv_db.rs  mod.rs  postgres_db.rs  tables.rs
src/database/csv/: mod.rs
src/database/csv/alerts/: mod.rs  ratings.rs
src/database/csv/ratings/: mod.rs
src/database/csv/users/: contents.rs  mod.rs  ratings.rs
src/database/postgres/: mod.rs
src/database/postgres/alerts/: mod.rs  ratings.rs
src/database/postgres/ratings/: mod.rs
src/database/postgres/users/: contents.rs  deserializer.rs  mod.rs  ratings.rs
src/error/: mod.rs
src/error/internal/: connection.rs  mod.rs
src/models/: alerts.rs  contents.rs  mod.rs  ratings.rs  users.rs
src/models/alerts/: mod.rs
src/models/alerts/wherables/: mod.rs
src/models/ratings/: mod.rs
src/models/ratings/wherables/: mod.rs
src/models/users/: mod.rs
src/models/users/wherables/: mod.rs  user_ratings.rs  users.rs
src/models/wherables/: alert_ratings.rs  alerts.rs  mod.rs  ratings.rs  user_ratings.rs  users.rs
src/services/: alerts.rs  mod.rs  ratings.rs  types.rs  users.rs
src/services/alerts/: alerts.rs  mod.rs
src/services/handlers/: mod.rs
src/services/handlers/alerts/: mod.rs  ratings.rs
src/services/handlers/ratings/: mod.rs
src/services/handlers/users/: contents.rs  mod.rs  ratings.rs
src/services/models/: alerts.rs  contents.rs  mod.rs  ratings.rs  users.rs
src/services/users/: mod.rs  users.rs
src/utils/: parser.rs
