[package]
authors = ["ogoes <otavio@ogoes.dev>"]
edition = "2018"
name = "database"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = {version = "0.4.19", features = ["serde"]}
config = "0.11.0"
csv_lib = {version = "1.1.6", optional = true, package = "csv"}
deadpool-postgres = {version = "=0.9.0", optional = true}
dotenv = "0.15.0"
enum_dispatch = "=0.3.7"
env_logger = "0.8.3"
futures = "=0.3.15"
impl-enum = "=0.2.0"
log = "0.4.14"
prost = "0.7.0"
queler = {path = "queler", optional = true}
sea-query = "=0.12.2"
serde = "1.0.125"
serde_derive = "1.0.126"
tokio = {version = "1.5.0", features = ["full"]}
tokio-pg-mapper = {path = "tokio_pg_mapper", optional = true}
tokio-pg-mapper-derive = {path = "tokio_pg_mapper/pg_mapper_derive", optional = true}
tokio-postgres = {version = "0.7.1", features = ["with-chrono-0_4"], optional = true}
tonic = "0.4.2"

[build-dependencies]
tonic-build = "0.4.2"

[features]
default = ["postgres"]
# csv = ["csv_lib"] #! deprecated 
postgres = ["deadpool-postgres", "queler", "tokio-pg-mapper", "tokio-pg-mapper-derive", "tokio-postgres"]
